--- a/web_static/styles/102-footer.css
+++ b/web_static/styles/102-footer.css
@@ -1,10 +1,11 @@
 footer {
-	position: fixed;
-	bottom: 0;
-	background-color: white;
-	height: 60px;
-	width: 100%;
-	text-align: center;
-	line-height: 30px;
-	border-top: 1px solid #CCCCCC;
+  color: black;
+  height: 60px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid #cccccc;
+  background: #fff;
+  width: 100%;
 }
