--- a/web_static/styles/103-filters.css
+++ b/web_static/styles/103-filters.css
@@ -1,101 +1,132 @@
 .filters {
-	display: block;
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
+  color: black;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1em;
+}
+
+.locations,
+.amenities {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  padding: 0.5em;
+}
+
+.amenities {
+  margin-bottom: 10px;
 }
 
 .locations {
-	display: inline;
-	vertical-align: middle;
-	float: left;
-	height: 100%;
-	width: 25%;
-
-	line-height: 20px;
-	border-right: 1px solid #DDDDDD;
+  border-bottom: 1px solid #dddddd;
 }
 
-.filter_amenities {
-	display: inline;
-	vertical-align: middle;
-	height: 100%;
-	float: left;
-    width: 25%;
-
-	line-height: 20px;
-}
-
-.popover {
-	list-style-type: none;
-	display: none;
-	background-color: #FAFAFA;
-	width: 100%;
-
-	margin-left: -1px;
-	margin-top: 8px;
-	padding: 25px 0px;
-
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
-}
-
-.locations:hover .popover {
-	display: inline-block;
-}
-
-.filter_amenities:hover .popover {
-	display: inline-block;
-}
-
-ul {
-	list-style-type: none;
-	padding: 0px;
-	padding-bottom: 20px;
-}
-
-li {
-}	
-
-h2 {
-	font-size: 16px;
-	padding-left: 30px;
-	margin: 0px;
+h3,
+h4 {
+  margin: 0;
 }
 
 h3 {
-	font-weight: 600;
-	margin-top: 12px;
-	margin-bottom: 5px;	
-	padding-left: 45px;
+  font-weight: 600;
+  margin-bottom: 2px;
 }
 
 h4 {
-	font-size: 14px;
-	font-weight: 400;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	padding-left: 45px;
+  font-weight: 400;
+  font-size: 14px;
 }
 
-button {
-	color: #FFFFFF;
-	font-size: 18px;
-	
-	height: 48px;
-	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
-	border-radius: 4px;
-
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
+ul.popover {
+  margin: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  list-style: none;
+  display: none;
+  background-color: #fafafa;
+  color: #000;
+  border: 1px solid #dddddd;
+  border-radius: 0 0 4px 4px;
+  padding: 0;
+  z-index: 99;
 }
 
-button:hover {
-	opacity: 90%;
+ul.popover h3 {
+  padding-top: 15px;
+}
+
+ul.popover li {
+  padding: 8px 12px;
+  cursor: pointer;
+  list-style-type: none;
+}
+
+ul.popover li:hover {
+  background-color: #dddddd;
+}
+
+.locations:hover ul.popover,
+.amenities:hover ul.popover {
+  display: block;
+}
+
+.amenities ul.popover li {
+  padding: 12px;
+}
+
+.search-button {
+  font-size: 18px;
+  background-color: #ff5a5f;
+  color: #ffffff;
+  height: 48px;
+  width: 100%;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.2s;
+}
+
+.search-button:hover {
+  opacity: 0.9;
+}
+
+/* Media queries for larger screens */
+@media screen and (min-width: 768px) {
+  .filters {
+    flex-direction: row;
+    height: 70px;
+    padding: 0;
+  }
+
+  .locations,
+  .amenities {
+    width: 25%;
+    padding-left: 30px;
+    padding: 0 0.5em;
+  }
+
+  .amenities {
+    margin-bottom: 0;
+  }
+
+  .locations {
+    border-right: 1px solid #dddddd;
+    border-bottom: none;
+  }
+
+  .search-button {
+    width: 20%;
+    margin-left: auto;
+    margin-right: 30px;
+  }
 }
