--- a/web_static/styles/103-header.css
+++ b/web_static/styles/103-header.css
@@ -1,18 +1,16 @@
-header {
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	
-	border-bottom: 1px solid #CCCCCC;
+.header {
+  width: 100%;
+  border-bottom: 1px solid #cccccc;
+  display: flex;
+  align-items: center;
+  background: #fff;
+  height: 70px;
 }
 
-#header_logo {
-	height: 100%;
-	width: 142px;
-
-	background-image: url("../images/logo.png");
-	background-repeat: no-repeat;
-	background-position: center;
-
-	margin-left: 20px;
+.logo {
+  width: 100px;
+  height: 40px;
+  background-image: url("../images/logo.png");
+  background-size: cover;
+  margin-left: 20px;
 }
