--- a/web_static/styles/103-places.css
+++ b/web_static/styles/103-places.css
@@ -1,209 +1,208 @@
 .places {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	margin: 45px auto;
-	text-align: center;
-}
-
-article {
-	display: flex;
-	width: 390px;
-	flex: none;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-content: flex-start;
-
-	padding-top: 10px;
-	padding-right: 20px;
-	padding-left: 20px;
-	padding-bottom: 40px;
-	margin: 20px;
-
-	border: 1px solid #FF5A5F;
-	border-radius: 4px;
-}
-
-.headline {
-	display: flex;
-	flex-direction: row;
-	position: relative;
-
-	height: 80px;	
-	width: 100%;
-}
-
-.price_by_night {
-	display: flex;
-	justify-content: center;
-	align-self: flex-end;
-
-	position: absolute;
-	right: 0;
-
-	line-height: 60px;
-	color: #FF5A5F;
-	font-size: 30px;
-	padding: 5px;
-	border: 4px solid #FF5A5F;
-	border-radius: 100%;
-	float: right;
-	min-width: 60px;
-	height: 60px;
-}
-
-.information {
-	display: block;
-	height: 80px;
-	width: 100%;
-	border-top: 1px solid #DDDDDD;
-	border-bottom: 1px solid #DDDDDD;
-
-	padding-top: 5px;
-	padding-bottom: 12px;
-	margin-top: 10px;
-	margin-bottom: 20px;
-}
-
-.max_guest, .number_rooms, .number_bathrooms {
-	display: inline-block;
-	width: 100px;
-	text-align: center;
-	margin: 0px auto;
-}
-
-.user {
-	margin-top: 5px;
-	margin-bottom: 5px;	
-}
-
-.description {
-	text-align: left;
+  margin-top: 40px;
+  padding-bottom: 60px;
 }
 
 h1 {
-	display: block;
-	text-align: left;
-	width: 95%;
-	display: block;
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-bottom: 5px;
-	font-size: 30px;
+  font-size: 30px;
+  margin: 0;
 }
 
-article .amenities {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	margin-top: 40px;
+article {
+  width: 390px;
+  padding: 20px;
+  margin-bottom: 20px;
+  border: 1px solid #ff5a5f;
+  border-radius: 4px;
+  margin: 20px;
 }
 
-.article_subtitle {
-	font-size: 16px;
-	text-align: left;
-	width: 100%;
-	border-bottom: 1px solid #DDDDDD;
-	padding: 0px;
-	margin: 0px;
-	padding-bottom: 10px;
+.article-header h2 {
+  font-size: 30px;
+  text-align: center;
+  margin: 0;
 }
 
-.article_title {
-	font-size: 30px;
-	margin: 10px auto;
-	padding: 0px;
+.places-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-article ul {
-	text-align: left;
-	margin-top: 20px;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
+.article-header {
+  min-height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
-article li {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-content: flex-start;
-	margin-bottom: 10px;
+.price_by_night {
+  color: #ff5a5f;
+  border: 4px solid #ff5a5f;
+  border-radius: 100%;
+  height: 60px;
+  min-width: 60px;
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
 }
 
-.reviews {
-	margin-top: 40px;
-	width: 100%;
+.places-list .icon {
+  width: 50px;
+  height: 50px;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.review_item {
-	margin-bottom: 10px;
+.information {
+  height: 80px;
+  border-top: 1px solid #dddddd;
+  border-bottom: 1px solid #dddddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  padding: 12px 0;
 }
 
-.review_text {
-	margin: 0px;
+.information > div {
+  width: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
 }
 
-article h3 {
-	font-size: 14px;
-	padding: 0px;
-	margin: 0px;
-	margin-bottom: 5px;
-
+.max_guest .icon {
+  background-image: url("../images/icon_group.png");
 }
 
-.guest_icon {
-	display: inline-block;
-	background-image: url("../images/icon_group.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 50px;
-	height: 50px;
+.number_rooms .icon {
+  background-image: url("../images/icon_bed.png");
 }
 
-.bed_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bed.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
+.number_bathrooms .icon {
+  background-image: url("../images/icon_bath.png");
+}
+.user {
+  margin-left: auto;
+  font-weight: bold;
 }
 
-.bath_icon {
-	display: inline-block;
-	background-image: url("../images/icon_bath.png");
-	background-repeat: no-repeat;
-	background-position: center;
-    width: 50px;
-    height: 50px;
+.description {
+  margin-top: 20px;
 }
 
-.tv_icon {
-	display: inline-block;
-	background-image: url("../images/icon_tv.png");
-	background-size: cover;
-	width: 20px;
-	height: 20px;
-
-	margin-right: 10px;
+.article-amenities {
+  margin: 40px 0;
 }
 
-.wifi_icon {
-	display: inline-block;
-    background-image: url("../images/icon_wifi.png");
-    background-size: cover;
-	width: 20px;
-    height: 20px;
-
-	margin-right: 10px;
+.article-amenities .icon {
+  width: 20px;
+  height: 20px;
 }
 
-.pet_icon {
-	display: inline-block;
-    background-image: url("../images/icon_pets.png");
-	background-size: cover;
-    width: 20px;
-	height: 20px;
+.article-amenities-header,
+.article-reviews-header {
+  padding: 10px 0;
+  border-bottom: 1px solid #dddddd;
+  margin-bottom: 15px;
+}
 
-	margin-right: 10px;
+.article-amenities h2,
+.article-reviews-header h2 {
+  font-size: 16px;
+  margin: 0;
+}
+
+.article-amenities ul li {
+  display: flex;
+  margin-bottom: 10px;
+  align-items: end;
+}
+
+.article-amenities ul li .icon {
+  margin-right: 15px;
+  width: 30px;
+  height: 30px;
+}
+
+.article-amenities .icon_tv {
+  background-image: url("../images/icon_tv.png");
+}
+.article-amenities .icon_wifi {
+  background-image: url("../images/icon_wifi.png");
+}
+.article-amenities .icon_coffee {
+  background-image: url("../images/icon_coffee.png");
+}
+.article-amenities .icon_washer {
+  background-image: url("../images/icon_washer.png");
+}
+.article-amenities .icon_pool {
+  background-image: url("../images/icon_pool.png");
+}
+.article-amenities .icon_jz {
+  background-image: url("../images/icon_jacuzzi.png");
+}
+.article-amenities .icon_pets {
+  background-image: url("../images/icon_pets.png");
+}
+
+.article-reviews ul li {
+  margin-bottom: 20px;
+}
+.article-reviews h3 {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.article-reviews p {
+  font-size: 12px;
+  margin: 0;
+}
+
+@media screen and (max-width: 420px) {
+  article {
+    width: 100%;
+    box-sizing: border-box;
+    margin: 20px 0;
+  }
+
+  .article-header {
+    flex-direction: column;
+  }
+
+  .price_by_night {
+    position: initial;
+    transform: none;
+    margin-top: 10px;
+  }
+
+  .information {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .information > div {
+    width: auto;
+    padding: 5px 0;
+  }
+
+  .article-amenities ul li {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .article-amenities ul li .icon {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
 }
