--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,27 +1,30 @@
 .filters {
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;	
+  color: white;
+  height: 70px;
+  width: 100%;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
 
-button {
-	color: #FFFFFF;
-	font-size: 18px;
-	
-	height: 48px;
-	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
-	border-radius: 4px;
-
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
+.search-button {
+  font-size: 18px;
+  background-color: #ff5a5f;
+  color: #ffffff;
+  height: 48px;
+  width: 20%;
+  border: none;
+  border-radius: 4px;
+  margin-right: 30px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.2s;
 }
 
-button:hover {
-	opacity: 90%;
+.search-button:hover {
+  opacity: 0.9;
 }
