--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,61 +1,59 @@
 .filters {
-	background-color: white;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;	
+  color: black;
+  height: 70px;
+  width: 100%;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+}
+
+.locations,
+.amenities {
+  height: 100%;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  justify-content: center;
 }
 
 .locations {
-	display: inline-block;
-	vertical-align: middle;
-
-	height: 100%;
-	width: 25%;
-
-	margin-left: 45px;
-	border-right: 1px solid #DDDDDD;
+  border-right: 1px solid #dddddd;
 }
 
-.amenities {
-	display: inline-block;
-	vertical-align: middle;
-
-	height: 100%;
-    width: 25%;
-
-	margin-left: 45px;
+h3,
+h4 {
+  margin: 0;
 }
 
 h3 {
-	font-weight: 600;
-	margin-top: 12px;
-	margin-bottom: 5px;	
+  font-weight: 600;
+  margin-bottom: 2px;
 }
 
 h4 {
-	font-size: 14px;
-	font-weight: 400;
-	margin-top: 5px;
-	margin-bottom: 12px;
+  font-weight: 400;
+  font-size: 14px;
 }
 
-button {
-	color: #FFFFFF;
-	font-size: 18px;
-	
-	height: 48px;
-	width: 20%;
-	background-color: #FF5A5F;
-	border-style: none;
-	border-radius: 4px;
-
-	float: right;
-	margin-top: 11px;
-	margin-bottom: 11px;
-	margin-right: 30px;
+.search-button {
+  font-size: 18px;
+  background-color: #ff5a5f;
+  color: #ffffff;
+  height: 48px;
+  width: 20%;
+  border: none;
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: 30px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.2s;
 }
 
-button:hover {
-	opacity: 90%;
+.search-button:hover {
+  opacity: 0.9;
 }
