--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,22 +4,22 @@
     <title>HBNB</title>
   </head>
   <body>
-    {% if state is defined %} {% if state is mapping %}
+    {% if state is mapping %}
     <h1>States</h1>
     <ul>
       {% for s in state.values() %}
       <li>{{ s.id }}: <b>{{ s.name }}</b></li>
       {% endfor %}
     </ul>
-    {% else %}
+    {% elif state is defined %}
     <h1>State: {{ state.name }}</h1>
     <h3>Cities:</h3>
     <ul>
-      {% for city in state.cities %}
+      {% for city in state.cities|sort(attribute="name") %}
       <li>{{ city.id }}: <b>{{ city.name }}</b></li>
       {% endfor %}
     </ul>
-    {% endif %} {% else %}
+    {% else %}
     <h1>Not found!</h1>
     {% endif %}
   </body>
