--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,21 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>HBNB</title>
-  </head>
-  <body>
-    <h1>States</h1>
-    <ul>
-      {% for state in states %}
-      <li>
-        {{ state.id }}: <b>{{ state.name }}</b>
-        <ul>
-          {% for city in state.cities | sort(attribute="name") %}
-          <li>{{ city.id }}: <b>{{ city.name }}</b></li>
-          {% endfor %}
-        </ul>
-      </li>
-      {% endfor %}
-    </ul>
-  </body>
-</html>
+<!DOCTYPE HTML>
+<HTML LANG="en">
+
+<HEAD>
+  <TITLE>HBNB</TITLE>
+</HEAD>
+
+<BODY>
+  <H1>States</H1>
+  <UL>
+    {% for state in states %}
+    <LI>
+      {{ state.id }}: <B>{{ state.name }}</B>
+      <UL>
+        {% for city in state.cities | sort(attribute="name") %}
+        <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+        {% endfor %}
+      </UL>
+    </LI>
+    {% endfor %}
+  </UL>
+</BODY>
+
+</HTML>
