--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML>
-<HTML LANG="en">
+<!DOCTYPE html>
+<HTML lang="en">
 
 <HEAD>
   <TITLE>HBNB</TITLE>
@@ -9,7 +9,7 @@
   {% if state is mapping %}
   <H1>States</H1>
   <UL>
-    {% for s in state.values() %}
+    {% for s in state.values()|sort(attribute="name") %}
     <LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
     {% endfor %}
   </UL>
